--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ image: node:12.13.0-alpine
 build:
   stage: build
   script:
-    - echo ${APP_VERSION}
-
+    - '%CURL% --header "PRIVATE-TOKEN: %ACCESS_TOKEN%" --insecure https://source.example.com/api/v4/projects/id/repository/tags/%CI_COMMIT_TAG% | %JQ% ".release.description" > %TEMPFILE%'
+    - cat %TEMPFILE%
 deploy:
   stage: deploy
   script:
