--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ image: node:12.13.0-alpine
 build:
   stage: build
   script:
-    - echo CI_COMMIT_TAG
+    - echo $CI_COMMIT_TAG
 deploy:
   stage: deploy
   script:
