--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ image: node:12.13.0-alpine
 
 build:
   before_script:
-    - curl -sL https://sentry.io/get-cli/ | bash
+    - npm install @sentry/cli
   stage: build
   script:
     - sentry-cli releases new $CI_COMMIT_TAG
