--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ image: node:12.13.0-alpine
 
 build:
   before_script:
-    - npm install @sentry/cli
+    - npm install -g @sentry/cli
   stage: build
   script:
     - sentry-cli releases new $CI_COMMIT_TAG
