--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,12 +6,12 @@ image: node:12.13.0-alpine
 
 build:
   before_script:
-    - sudo npm install -g @sentry/cli --unsafe-perm
+    - npm install @sentry/cli
   stage: build
   script:
-    - sentry-cli releases new $CI_COMMIT_TAG
-    - sentry-cli releases set-commits --auto $CI_COMMIT_TAG
-    - sentry-cli releases finalize "$CI_COMMIT_TAG"
+    - ./node_modules/@sentry/cli/sentry-cli releases new $CI_COMMIT_TAG
+    - ./node_modules/@sentry/cli/sentry-cli releases set-commits --auto $CI_COMMIT_TAG
+    - ./node_modules/@sentry/cli/sentry-cli releases finalize "$CI_COMMIT_TAG"
   only:
     - tags
 
