--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,23 @@
+stages: 
+  - build
+  - deploy
+
 image: node:12.13.0-alpine
 
-before_script:
-  - npm i -g firebase-tools
+build:
+  before_script:
+    - npm install @sentry/cli
+  stage: build
+  script:
+    - ./node_modules/@sentry/cli/sentry-cli releases new $CI_COMMIT_TAG
+    - ./node_modules/@sentry/cli/sentry-cli releases set-commits --auto $CI_COMMIT_TAG
+    - ./node_modules/@sentry/cli/sentry-cli releases finalize "$CI_COMMIT_TAG"
+  only:
+    - tags
 
 deploy:
+  before_script:
+    - npm i -g firebase-tools
   stage: deploy
   script:
     - firebase deploy --token $FIREBASE_TOKEN
