--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ build:
     - npm install @sentry/cli
   stage: build
   script:
+    - sed -i 's/_VERSION_/$CI_COMMIT_TAG/g' input.txt
     - ./node_modules/@sentry/cli/sentry-cli releases new $CI_COMMIT_TAG
     - ./node_modules/@sentry/cli/sentry-cli releases set-commits --auto $CI_COMMIT_TAG
     - ./node_modules/@sentry/cli/sentry-cli releases finalize "$CI_COMMIT_TAG"
