--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ deploy:
   stage: deploy
   script:
     - sed -i 's/_VERSION_/$CI_COMMIT_TAG/g' index.html
-    - cat intex.html
+    - cat index.html
     - ./node_modules/@sentry/cli/sentry-cli releases new $CI_COMMIT_TAG
     - ./node_modules/@sentry/cli/sentry-cli releases set-commits --auto $CI_COMMIT_TAG
     - ./node_modules/@sentry/cli/sentry-cli releases finalize "$CI_COMMIT_TAG"
