--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ deploy:
     - npm install @sentry/cli
   stage: deploy
   script:
-    - sed -i 's/_VERSION_/$CI_COMMIT_TAG/g' index.html
+    - envsubst < index.html
     - cat index.html
     - ./node_modules/@sentry/cli/sentry-cli releases new $CI_COMMIT_TAG
     - ./node_modules/@sentry/cli/sentry-cli releases set-commits --auto $CI_COMMIT_TAG
