--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "site/",
+    "public": "chrome_extension/site/",
     "ignore": [
       "firebase.json",
       "**/.*",
