--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -4,7 +4,8 @@
     "version": "1.0.0",
     "description": "Eine einfache, aber mächtige Newtab-Seite",
     "permissions": [
-        "tabs"
+        "tabs",
+        "storage"
     ],
     "chrome_url_overrides": {
         "newtab": "site/index.html"
