--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "NewTabs",
-    "version": "1.1.0",
+    "version": "1.1.2",
     "description": "Eine einfache, aber mächtige Newtab-Seite",
     "permissions": [
         "tabs",
@@ -21,5 +21,5 @@
         "48": "icons/Icon-48x48.png",
         "128": "icons/Icon-128x128.png"
     },
-    "content_security_policy": "script-src 'self' https://browser.sentry-cdn.com/5.12.1/bundle.min.js 'sha256-hSnINRaDHJuGavrYN4sRcmxWCKensRaww3J1l3p+3kI='; object-src 'self'"
+    "content_security_policy": "script-src 'self' https://browser.sentry-cdn.com/5.12.1/bundle.min.js unsafe-inline; object-src 'self'"
 }
