--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,19 +4,30 @@ stages:
 
 image: node:12.13.0-alpine
 
-deploy:
+build:
   before_script:
-    - npm i -g firebase-tools
     - npm install @sentry/cli
     - npm install -g envsub
     - npm install uglify-js -g
     - npm install uglifycss -g
-  stage: deploy
+  stage: build
   script:
     - envsub -d chrome_extension/site/js/config.js
+    - sed -i 's/"version": "1.1.3"/"version": "${CI_COMMIT_TAG}"/g' chrome_extension/manifest.json
+    - envsub -d chrome_extension/manifest.json
     - ./node_modules/@sentry/cli/sentry-cli releases new $CI_COMMIT_TAG
     - ./node_modules/@sentry/cli/sentry-cli releases set-commits --auto $CI_COMMIT_TAG
     - ./node_modules/@sentry/cli/sentry-cli releases finalize "$CI_COMMIT_TAG"
-    - firebase deploy --token $FIREBASE_TOKEN
   only:
     - tags
+    
+deploy-web:
+  before_script:
+    - npm i -g firebase-tools
+  stage:
+    - deploy
+  script: 
+    - cat chrome_extension/manifest.json
+  only:
+    - tags
+
