--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
   stage: build
   script:
   - envsub -d chrome_extension/site/js/config.js
-  - sed -i 's/"version": "1.1.3"/"version": "${CI_COMMIT_TAG}"/g' chrome_extension/manifest.json
+  - sed -i 's/1.1.3/${CI_COMMIT_TAG}/g' chrome_extension/manifest.json
   - envsub -d chrome_extension/manifest.json
   - ./node_modules/@sentry/cli/sentry-cli releases new $CI_COMMIT_TAG
   - ./node_modules/@sentry/cli/sentry-cli releases set-commits --auto $CI_COMMIT_TAG
