--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,11 @@ stages:
 
 image: node:12.13.0-alpine
 
+cache:
+  key: ${CI_COMMIT_REF_SLUG}
+  paths:
+  - .npm/
+
 build:
   before_script:
   - npm install @sentry/cli
@@ -11,6 +16,9 @@ build:
   - npm install uglify-js -g
   - npm install uglifycss -g
   stage: build
+  artifacts: 
+    paths:
+    - chrome_extension/
   script:
   - envsub -d chrome_extension/site/js/config.js
   - sed -i 's/1.1.3/${CI_COMMIT_TAG}/g' chrome_extension/manifest.json
