--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,15 @@ cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths:
   - .npm/
+  
+before_script:
+- npm install @sentry/cli
+- npm install -g envsub
+- npm install uglify-js -g
+- npm install uglifycss -g
+- npm i -g firebase-tools
 
 build:
-  before_script:
-  - npm install @sentry/cli
-  - npm install -g envsub
-  - npm install uglify-js -g
-  - npm install uglifycss -g
   stage: build
   artifacts: 
     paths:
@@ -26,10 +28,13 @@ build:
   - ./node_modules/@sentry/cli/sentry-cli releases new $CI_COMMIT_TAG
   - ./node_modules/@sentry/cli/sentry-cli releases set-commits --auto $CI_COMMIT_TAG
   - ./node_modules/@sentry/cli/sentry-cli releases finalize "$CI_COMMIT_TAG"
+  only:
+  - tags
 
 deploy-web:
-  before_script:
-  - npm i -g firebase-tools
   stage: deploy
   script:
-  - cat chrome_extension/manifest.json
+  - firebase deploy --token $FIREBASE_TOKEN
+  only:
+  - tags
+  
