--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -21,5 +21,5 @@
         "48": "icons/Icon-48x48.png",
         "128": "icons/Icon-128x128.png"
     },
-    "content_security_policy": "script-src 'self' https://browser.sentry-cdn.com/5.12.1/bundle.min.js; object-src 'self'"
+    "content_security_policy": "script-src 'self'; object-src 'self'"
 }
