--- a/site/package.json
+++ b/site/package.json
@@ -21,10 +21,13 @@
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.8",
     "cypress": "^10.4.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.16",
     "start-server-and-test": "^1.14.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "~4.7.4",
     "vite": "^3.0.4",
     "vitest": "^0.21.0",
