--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,25 +1,21 @@
 {
-    "manifest_version": 2,
-    "name": "NewTabs",
-    "version": "1.1.3",
-    "description": "Eine einfache, aber mächtige Newtab-Seite",
-    "permissions": [
-        "tabs",
-        "storage"
-    ],
-    "chrome_url_overrides": {
-        "newtab": "site/index.html"
-    },
-    "background": {
-        "scripts": [
-            "background_scripts/giveFocus.js"
-        ],
-        "persistent": false
-    },
-    "icons": {
-        "16": "icons/Icon-16x16.png",
-        "48": "icons/Icon-48x48.png",
-        "128": "icons/Icon-128x128.png"
-    },
-    "content_security_policy": "script-src 'self'; object-src 'self'"
+  "manifest_version": 3,
+  "name": "NewTabs",
+  "version": "4.0.0",
+  "description": "Eine einfache, aber mächtige Newtab-Seite",
+  "permissions": ["tabs", "storage"],
+  "chrome_url_overrides": {
+    "newtab": "site/index.html"
+  },
+  "background": {
+    "service_worker": "background_scripts/giveFocus.js"
+  },
+  "icons": {
+    "16": "icons/Icon-16x16.png",
+    "48": "icons/Icon-48x48.png",
+    "128": "icons/Icon-128x128.png"
+  },
+  "content_security_policy": {
+    "extension_pages": "default-src 'self'; font-src 'self'; connect-src 'self' https://picsum.photos https://i.picsum.photos/; img-src 'self' data:"
+  }
 }
