--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "NewTabs",
-  "version": "4.1.1",
+  "version": "4.2.0",
   "description": "Eine einfache, aber mächtige Newtab-Seite",
   "permissions": ["tabs", "storage"],
   "chrome_url_overrides": {
@@ -14,6 +14,9 @@
     "16": "icons/Icon-16x16.png",
     "48": "icons/Icon-48x48.png",
     "128": "icons/Icon-128x128.png"
+  },
+  "action": {
+    "default_popup": "popup.html"
   },
   "content_security_policy": {
     "extension_pages": "default-src 'self'; font-src 'self'; connect-src 'self' https://picsum.photos https://i.picsum.photos/; img-src 'self' data:"
