--- a/site/package.json
+++ b/site/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.202",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^16.11.47",
     "@vitejs/plugin-vue": "^3.0.1",
