--- a/site/tsconfig.app.json
+++ b/site/tsconfig.app.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "types": ["chrome"],
     "paths": {
       "@/*": ["./src/*"]
     }
