--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "NewTabs",
-  "version": "4.3.6",
+  "version": "4.4.0",
   "description": "Eine einfache, aber mächtige Newtab-Seite",
-  "permissions": ["tabs", "storage"],
+  "permissions": ["tabs", "storage", "unlimitedStorage"],
   "chrome_url_overrides": {
     "newtab": "site/index.html"
   },
@@ -19,6 +19,6 @@
     "default_popup": "popup.html"
   },
   "content_security_policy": {
-    "extension_pages": "default-src 'self'; font-src 'self'; connect-src 'self' https://picsum.photos https://i.picsum.photos/; img-src 'self' data:"
+    "extension_pages": "default-src 'self'; font-src 'self'; connect-src 'self' https://picsum.photos https://i.picsum.photos/ data:; img-src 'self' data:"
   }
 }
